@@ -3,9 +3,14 @@
 AppName=easy-admin-1.0.0.jar
 
 #JVM参数
-JVM_OPTS="-Dname=$AppName -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Asia/Shanghai -Xms100M -Xmx100M -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
+JVM_OPTS="-Dname=$AppName
+ -Djava.security.egd=file:/dev/./urandom
+ -Duser.timezone=Asia/Shanghai
+ -Dfile.encoding=UTF-8
+ -Xms100M -Xmx100M
+ -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./
+ -XX:+UseConcMarkSweepGC"
 APP_HOME=`pwd`
-LOG_PATH=$APP_HOME/logs/$AppName.log
 
 if [ "$1" = "" ];
 then
